--- a/tests/images.yml
+++ b/tests/images.yml
@@ -3,7 +3,7 @@ in:  This is an !image.jpg!
 out: <p>This is an <img src="image.jpg" alt="" /></p>
 ---
 in:  This is an !image.jpg(with alt text)!
-out: <p>This is an <img src="image.jpg" alt="with alt text" /></p>
+out: <p>This is an <img src="image.jpg" title="with alt text" alt="with alt text" /></p>
 ---
 in:  This is an !http://example.com/i/image.jpg!
 out: <p>This is an <img src="http://example.com/i/image.jpg" alt="" /></p>
@@ -15,7 +15,7 @@ in:  This is an !image.jpg!.
 out: <p>This is an <img src="image.jpg" alt="" />.</p>
 ---
 in:  This is an !image.jpg(with alt text)!.
-out: <p>This is an <img src="image.jpg" alt="with alt text" />.</p>
+out: <p>This is an <img src="image.jpg" title="with alt text" alt="with alt text" />.</p>
 ---
 in:  This is an !http://example.com/i/image.jpg!.
 out: <p>This is an <img src="http://example.com/i/image.jpg" alt="" />.</p>
