--- a/tests/code.yml
+++ b/tests/code.yml
@@ -1,3 +1,42 @@
 ---
 in: 'This is an empty dictionary: @{}@'
 out: '<p>This is an empty dictionary: <code>{}</code></p>'
+---
+in: |-
+  Testing nested pre tags...
+
+  <pre>
+  <code>
+    Good code here.
+
+    <pre>
+      a = 1
+    </pre>
+
+    Bad code here.
+
+    <script language="JavaScript">
+      window.open( "about:blank" );
+    </script>
+  </code>
+  </pre>
+
+out: |-
+  <p>Testing nested pre tags&#8230;</p>
+  
+  <pre>
+  <code>
+    Good code here.
+  
+    &lt;pre&gt;
+      a = 1
+    &lt;/pre&gt;
+  
+    Bad code here.
+  
+    &lt;script language="JavaScript"&gt;
+      window.open( "about:blank" );
+    &lt;/script&gt;
+  </code>
+  </pre>
+
