- lib/redcloth.rb: Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps     only once.  Thanks, David!

--- a/tests/code.yml
+++ b/tests/code.yml
@@ -39,4 +39,18 @@ out: |-
     &lt;/script&gt;
   </code>
   </pre>
-
+---
+in: |-
+  <notextile>
+  *** test
+  </notextile>
+out: |-
+  <notextile>
+  *** test
+  </notextile>
+---
+in: '*this <span></span> is strong*'
+out: '<p><strong>this <span></span> is strong</strong></p>'
+---
+in: '*this <span>test</span> is strong*'
+out: '<p><strong>this <span>test</span> is strong</strong></p>'
