--- %YAML:1.0 - version: 2.0.8   date: 2004-05-22   changes:     - First scan of the glyphs() method only scans for pre|notextile|code, the       deeper passes scan for all HTML.  Now inlines work around HTML tags!       (What a pain!)     - Moved tables and blocks into glyphs to keep them shielded from the parser       if they are in <pre> tags.     - Patch by Denis Mertz to speed up RedCloth by compiling the various RegExps       only once.  Thanks, David!

--- a/tests/code.yml
+++ b/tests/code.yml
@@ -41,13 +41,20 @@ out: |-
   </pre>
 ---
 in: |-
+  <pre>
+  *** test
+  </pre>
+out: |-
+  <pre>
+  *** test
+  </pre>
+---
+in: |-
   <notextile>
   *** test
   </notextile>
 out: |-
-  <notextile>
   *** test
-  </notextile>
 ---
 in: '*this <span></span> is strong*'
 out: '<p><strong>this <span></span> is strong</strong></p>'
