--- a/tests/instiki.yml
+++ b/tests/instiki.yml
@@ -4,6 +4,18 @@ in: |-
 out: |-
   <p><em>Hi, <span class="newWikiWord">Joe Bob<a href="../show/JoeBob">?</a></span>, this should all be in italic!</em></p>
 ---
+in: '*this <span>span</span> is strong*'
+out: '<p><strong>this <span>span</span> is strong</strong></p>'
+---
+in: '*this <span>Camel Thing<a href="../show/CamelThing">?</a></span> is strong*'
+out: '<p><strong>this <span>Camel Thing<a href="../show/CamelThing">?</a></span> is strong</strong></p>'
+---
+in: '_this <span>span</span> is italic_'
+out: '<p><em>this <span>span</span> is italic</em></p>'
+---
+in: '%{color:red}nested span because of <span><span class="newWikiWord">Camel Word<a href="../show/CamelWord">?</a></span></span>%'
+out: '<p><span style="color:red;">nested span because of <span><span class="newWikiWord">Camel Word<a href="../show/CamelWord">?</a></span></span></span></p>'
+---
 in: |-
   h2. Version History
   * "Version 
