- New patch and test by F. Ros to fix <pre> tags with class settings.

--- a/tests/code.yml
+++ b/tests/code.yml
@@ -61,3 +61,6 @@ out: '<p><strong>this <span></span> is strong</strong></p>'
 ---
 in: '*this <span>test</span> is strong*'
 out: '<p><strong>this <span>test</span> is strong</strong></p>'
+---
+in: <pre class="code"> __inline__</pre>
+out: <pre class="code"> __inline__</pre>
