- version: 2.0.12   date: 2004-08-09   changes:     - Escaping tighter for <pre> tags that share a single line.     - No more String#htmlesc!.  Moved to RedCloth#htmlesc.     - Pruned out the code that was handling multibyte.

--- a/tests/code.yml
+++ b/tests/code.yml
@@ -64,3 +64,9 @@ out: '<p><strong>this <span>test</span> is strong</strong></p>'
 ---
 in: <pre class="code"> __inline__</pre>
 out: <pre class="code"> __inline__</pre>
+---
+in: |-
+  * @foo@
+  * @bar@
+  * and @x@ is also.
+out: "<ul>\n\t<li><code>foo</code></li>\n\t\t<li><code>bar</code></li>\n\t\t<li>and <code>x</code> is also.</li>\n\t</ul>"
