--- a/tests/lists.yml
+++ b/tests/lists.yml
@@ -24,11 +24,10 @@ in: |-
   p. end
 out: |-
   <p>start</p>
-  
   	<ul>
-  	<li>one<br />
+  	<li>one
   and one</li>
-  		<li>two<br />
+  		<li>two
   and two</li>
   		<li>three</li>
   	</ul>
@@ -52,7 +51,6 @@ in: |-
 
 out: |-
   <p>Funky:</p>
-  
   	<ul>
   	<li>Testing
   	<ol>
@@ -62,7 +60,7 @@ out: |-
   	</ul>
   	</li>
   		<li>number</li>
-  		<li>number<br />
+  		<li>number
   yeah number</li>
   	<ul>
   	<li>bullet
