lib/redcloth.rb: - The caps class doesn't swallow spaces. - Horizontal rules required to be on an empty line. - Hard breaks don't screw with Markdown headers any longer.

--- a/tests/textism.yml
+++ b/tests/textism.yml
@@ -401,3 +401,6 @@ out: |-
   		<li>We must act</li>
   	</ul>
 
+---
+in: '"test":http://foo.com/b---ar'
+out: <p><a href="http://foo.com/b---ar">test</a></p>
