--- a/test/links.yml
+++ b/test/links.yml
@@ -136,11 +136,11 @@ out: <p><a href="http://example.com/" title="link title">link text</a></p>
 # comments: this is a real test and should pass
 ---
 in: '"(link) text(link title)":http://example.com/'
-out: <p><a href="http://example.com/" class="link" title="link title"> text</a></p>
+out: <p><a href="http://example.com/" class="link" title="link title">text</a></p>
 comments: link text can not contain parentheses
 ---
 in: '"Dive Into XML":http://www.xml.com/pub/au/164'
-out: <p><a href="http://www.xml.com/pub/au/164">Dive Into <span class="caps">XML</span></a></p>
+out: <p><a href="http://www.xml.com/pub/au/164">Dive Into XML</a></p>
 ---
 in: '"Lab Exercises":../lab/exercises/exercises.html.'
 out: <p><a href="../lab/exercises/exercises.html">Lab Exercises</a>.</p>
@@ -152,7 +152,7 @@ in: '* "rubylang":http://www.ruby-lang.org/en/'
 out: "<ul>\n\t<li><a href=\"http://www.ruby-lang.org/en/\">rubylang</a></li>\n</ul>"
 ---
 in: 'The ION coding style document found at "IONCodingStyleGuide.doc":http://perforce:8081/@md=d&cd=//&c=82E@//depot/systest/system/main/pub/doc/IONCodingStyleGuide.doc?ac=22 codifies a couple of rules to ensure reasonably consistent code and documentation of libraries in ION. Test text'
-out: <p>The <span class="caps">ION</span> coding style document found at <a href="http://perforce:8081/@md=d&#38;cd=//&#38;c=82E@//depot/systest/system/main/pub/doc/IONCodingStyleGuide.doc?ac=22">IONCodingStyleGuide.doc</a> codifies a couple of rules to ensure reasonably consistent code and documentation of libraries in <span class="caps">ION</span>. Test text</p>
+out: <p>The ION coding style document found at <a href="http://perforce:8081/@md=d&#38;cd=//&#38;c=82E@//depot/systest/system/main/pub/doc/IONCodingStyleGuide.doc?ac=22">IONCodingStyleGuide.doc</a> codifies a couple of rules to ensure reasonably consistent code and documentation of libraries in ION. Test text</p>
 ---
 in: '"testing":'
 out: "<p>&#8220;testing&#8221;:</p>"
