Cleaned up textism tests.

--- a/test/textism.yml
+++ b/test/textism.yml
@@ -26,10 +26,10 @@ out: |-
 
 ---
 in: This is covered elsewhere[1].
-out: <p>This is covered elsewhere<sup><a href="#fn1">1</a></sup>.</p>
+out: <p>This is covered elsewhere<sup class="footnote"><a href="#fn1">1</a></sup>.</p>
 ---
 in: fn1. Down here, in fact.
-out: <p id="fn1"><sup>1</sup> Down here, in fact.</p>
+out: <p id="fn1" class="footnote"><sup>1</sup> Down here, in fact.</p>
 ---
 in: |-
   # A first item
@@ -76,7 +76,7 @@ in: Nabokov's ??Pnin??
 out: <p>Nabokov&#8217;s <cite>Pnin</cite></p>
 ---
 in: '[-a phrase-]'
-out: <p> <del>a phrase</del> </p>
+out: <p><del>a phrase</del></p>
 ---
 in: +a phrase+
 out: <p><ins>a phrase</ins></p>
@@ -86,12 +86,12 @@ out: <p><sup>a phrase</sup></p>
 ---
 in: ~a phrase~
 out: <p><sub>a phrase</sub></p>
-# ---
-# in: %(caps)SPAN%
-# out: <p><span class="caps">SPAN</span>
+---
+in: %(caps)SPAN%
+out: <p><span class="caps">SPAN</span>
 ---
 in: %{color:red}red%
-out: <p><span style="color:red">red</span></p>
+out: <p><span style="color:red;">red</span></p>
 ---
 in: %[fr]rouge%
 out: <p><span lang="fr">rouge</span></p>
@@ -103,7 +103,7 @@ in: p(bob). A paragraph
 out: <p class="bob">A paragraph</p>
 ---
 in: p{color:#ddd}. A paragraph
-out: <p style="color:#ddd">A paragraph</p>
+out: <p style="color:#ddd;">A paragraph</p>
 ---
 in: p[fr]. A paragraph
 out: <p lang="fr">A paragraph</p>
@@ -118,7 +118,7 @@ in: '!>/image.gif! right-aligned image'
 out: <p style="float:right"><img src="/image.gif" alt="" /> right-aligned image</p>
 ---
 in: p[no]{color:red}. A Norse of a different colour.
-out: <p style="color:red" lang="no">A Norse of a different colour.</p>
+out: <p style="color:red;" lang="no">A Norse of a different colour.</p>
 ---
 in: |-
   |This|is|a|simple|table|
@@ -146,7 +146,7 @@ in: |-
   |This|is|a|row|
   |This|is|a|row|
 out: |-
-  <table style="border:1px solid black">
+  <table style="border:1px solid black;">
   		<tr>
   			<td>This</td>
   			<td>is</td>
@@ -164,7 +164,7 @@ out: |-
 in: '{background:#ddd}. |This|is|a|row|'
 out: |-
   <table>
-  		<tr style="background:#ddd">
+  		<tr style="background:#ddd;">
   			<td>This</td>
   			<td>is</td>
   			<td>a</td>
@@ -180,7 +180,7 @@ in: |-
 out: |-
   <table>
   		<tr>
-  			<td style="background:#ddd">Cell with gray background</td>
+  			<td style="background:#ddd;">Cell with gray background</td>
   		</tr>
   		<tr>
   			<td colspan="2">Cell spanning 2 columns</td>
@@ -192,11 +192,12 @@ out: |-
   			<td style="text-align:right;">Right-aligned cell</td>
   		</tr>
   	</table>
-# ---
-# in: |-
-#   This is a "link":bob to Bob's website.
-# 
-#   [bob]http://itsbob.com/index.html
+---
+in: |-
+  This is a "link":bob to Bob's website.
+  
+  [bob]http://itsbob.com/index.html
+out: '<p>This is a <a href="http://itsbob.com/index.html">link</a> to Bob&#8217;s website.</p>'
 ---
 in: ACLU(American Civil Liberties Union)
 out: <p><acronym title="American Civil Liberties Union">ACLU</acronym></p>
@@ -227,66 +228,11 @@ in: |-
   ## y
   # three
   
-  Mixed list:
-  
-  * Point one
-  * Point two
-  ## Step 1
-  ## Step 2
-  ## Step 3
-  * Point three
-  ** Sub point 1
-  ** Sub point 2
-  
-  
-  Well, that went well. How about we insert an <a href="/" title="watch out">old-fashioned hypertext link</a>? Will the quote marks in the tags get messed up? No!
-  
-  "This is a link (optional title)":http://www.textism.com
-  
-  table{border:1px solid black}.
-  |_. this|_. is|_. a|_. header|
-  <{background:gray}. |\2. this is|{background:red;width:200px}. a|^<>{height:200px}. row|
-  |this|<>{padding:10px}. is|^. another|(bob#bob). row|
-  
-  An image:
-  
-  !/common/textist.gif(optional alt text)!
-  
-  # Librarians rule
-  # Yes they do
-  # But you knew that
-  
-  Some more text of dubious character. Here is a noisome string of CAPITAL letters. Here is something we want to _emphasize_.
-  That was a linebreak. And something to indicate *strength*. Of course I could use <em>my own HTML tags</em> if I <strong>felt</strong> like it.
-  
-  h3. Coding
-  
-  This <code>is some code, "isn't it"</code>. Watch those quote marks! Now for some preformatted text:
-  
-  <pre>
-  <code>
-      $text = str_replace("<p>%::%</p>","",$text);
-      $text = str_replace("%::%</p>","",$text);
-      $text = str_replace("%::%","",$text);
-  
-  </code>
-  </pre>
-  
-  This isn't code.
-  
-  
-  So you see, my friends:
-  
-  * The time is now
-  * The time is not later
-  * The time is not yesterday
-  * We must act
-
 out: |-
   <h2 style="color:green;">This is a title</h2>
   	<h3>This is a subhead</h3>
   	<p style="color:red;">This is some text of dubious character. Isn&#8217;t the use of &#8220;quotes&#8221; just lazy writing&#8212;and theft of &#8216;intellectual property&#8217; besides? I think the time has come to see a block quote.</p>
-  	<blockquote>
+  	<blockquote lang="fr">
   		<p lang="fr">This is a block quote. I&#8217;ll admit it&#8217;s not the most exciting block quote ever devised.</p>
   	</blockquote>
   	<p>Simple list:</p>
@@ -295,6 +241,52 @@ out: |-
   	<li>two</li>
   	<li>three</li>
   </ol>
+  	<p>Multi-level list:</p>
+  <ol>
+  	<li>one
+  	<ol>
+  		<li>aye</li>
+  		<li>bee</li>
+  		<li>see</li>
+  	</ol></li>
+  	<li>two
+  	<ol>
+  		<li>x</li>
+  		<li>y</li>
+  	</ol></li>
+  	<li>three</li>
+  </ol>
+---
+in: |-
+
+  Multi-level list:
+
+  # one
+  ## aye
+  ## bee
+  ## see
+  # two
+  ## x
+  ## y
+  # three
+
+  Mixed list:
+
+  * Point one
+  * Point two
+  ## Step 1
+  ## Step 2
+  ## Step 3
+  * Point three
+  ** Sub point 1
+  ** Sub point 2
+
+
+  Well, that went well. How about we insert an <a href="/" title="watch out">old-fashioned hypertext link</a>? Will the quote marks in the tags get messed up? No!
+
+  "This is a link (optional title)":http://www.textism.com
+
+out: |-
   	<p>Multi-level list:</p>
   <ol>
   	<li>one
@@ -327,6 +319,20 @@ out: |-
   </ul>
   	<p>Well, that went well. How about we insert an <a href="/" title="watch out">old-fashioned hypertext link</a>? Will the quote marks in the tags get messed up? No!</p>
   	<p><a href="http://www.textism.com" title="optional title">This is a link</a></p>
+---
+in: |-
+  "This is a link (optional title)":http://www.textism.com
+  
+  table{border:1px solid black}.
+  |_. this|_. is|_. a|_. header|
+  <{background:gray}. |\2. this is|{background:red;width:200px}. a|^<>{height:200px}. row|
+  |this|<>{padding:10px}. is|^. another|(bob#bob). row|
+  
+  An image:
+  
+  !/common/textist.gif(optional alt text)!
+out: |-
+  	<p><a href="http://www.textism.com" title="optional title">This is a link</a></p>
   	<table style="border:1px solid black;">
   		<tr>
   			<th>this</th>
@@ -348,13 +354,54 @@ out: |-
   	</table>
   	<p>An image:</p>
   	<p><img src="/common/textist.gif" title="optional alt text" alt="optional alt text" /></p>
+---
+in: |-
+  An image:
+  
+  !/common/textist.gif(optional alt text)!
+  
+  # Librarians rule
+  # Yes they do
+  # But you knew that
+  
+  Some more text of dubious character. Here is a noisome string of CAPITAL letters. Here is something we want to _emphasize_.
+  That was a linebreak. And something to indicate *strength*. Of course I could use <em>my own HTML tags</em> if I <strong>felt</strong> like it.
+out: |-
+  	<p>An image:</p>
+  	<p><img src="/common/textist.gif" title="optional alt text" alt="optional alt text" /></p>
   <ol>
   	<li>Librarians rule</li>
   	<li>Yes they do</li>
   	<li>But you knew that</li>
   </ol>
-  	<p>Some more text of dubious character. Here is a noisome string of <span class="caps">CAPITAL</span> letters. Here is something we want to <em>emphasize</em>.
+  	<p>Some more text of dubious character. Here is a noisome string of <span class="caps">CAPITAL</span> letters. Here is something we want to <em>emphasize</em>.<br />
   That was a linebreak. And something to indicate <strong>strength</strong>. Of course I could use <em>my own <span class="caps">HTML</span> tags</em> if I <strong>felt</strong> like it.</p>
+---
+in: |-
+  h3. Coding
+  
+  This <code>is some code, "isn't it"</code>. Watch those quote marks! Now for some preformatted text:
+  
+  <pre>
+  <code>
+      $text = str_replace("<p>%::%</p>","",$text);
+      $text = str_replace("%::%</p>","",$text);
+      $text = str_replace("%::%","",$text);
+  
+  </code>
+  </pre>
+  
+  This isn't code.
+  
+  
+  So you see, my friends:
+  
+  * The time is now
+  * The time is not later
+  * The time is not yesterday
+  * We must act
+
+out: |-
   	<h3>Coding</h3>
   	<p>This <code>is some code, "isn't it"</code>. Watch those quote marks! Now for some preformatted text:</p>
   <pre>
