--- a/test/textism.yml
+++ b/test/textism.yml
@@ -419,3 +419,40 @@ out: |-
   	<li>The time is not yesterday</li>
   	<li>We must act</li>
   </ul>
+---
+in: |-
+  trivial
+  break
+out: |-
+  <p>trivial<br />break</p>
+---
+in: |-
+  trivial
+  break
+  
+  next
+out: |-
+  <p>trivial<br />break</p>
+  
+  	<p>next</p>
+---
+in: |-
+  trivial
+
+  paragraphs
+out: |-
+  <p>trivial</p>
+
+  	<p>paragraphs</p>
+---
+in: |-
+  * first line
+  * second
+    line
+  * third line
+out: |-
+  <ul>
+  	<li>first line</li>
+  	<li>second<br />  line</li>
+  	<li>third line</li>
+  </ul>
